<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".screen.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="54dp"
            android:background="@drawable/login_field"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="34dp">

            <ImageView
                android:layout_width="157dp"
                android:layout_height="72dp"
                android:layout_marginTop="51dp"
                android:contentDescription="@android:string/autofill"
                android:src="@drawable/logo_app"
                tools:ignore="NewApi" />

            <TextView
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/episodic_series_of_digital_audio"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="72dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_outline_local_post_office_24"
                android:drawablePadding="25dp"
                android:drawableTint="@color/acrylic_white"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:paddingStart="25dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/key16"
                android:drawablePadding="25dp"
                android:drawableTint="@color/acrylic_white"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:paddingStart="25dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:shadowColor="@color/shadowPrimary"
                android:shadowDx="0"
                android:shadowDy="50"
                android:shadowRadius="50"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="64dp"
                app:elevation="16dp" />

            <TextView
                android:id="@+id/btnForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textColor="@color/textColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogFB"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="38dp"
                android:backgroundTint="#2B5D95"
                android:shadowColor="#B22B5D95"
                android:shadowDx="0"
                android:shadowDy="50"
                android:shadowRadius="50"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="64dp"
                app:elevation="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="#FF334B"
                android:shadowColor="#B2FF334B"
                android:shadowDx="0"
                android:shadowDy="50"
                android:shadowRadius="50"
                android:text="@string/register_new_account"
                android:textAllCaps="false"
                android:layout_marginBottom="47dp"
                android:textSize="16sp"
                app:cornerRadius="64dp"
                app:elevation="16dp" />


        </LinearLayout>
    </ScrollView>



</FrameLayout>