<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:background="@drawable/menu_top_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="58dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:text="Hello,          Samata!" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/imgNotification"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="6dp"
                        android:src="@drawable/bell" />

                    <ImageView
                        android:id="@+id/imgCancel"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="46dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="33dp"
                        android:src="@drawable/cancel" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/acrylic_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal"
                    android:paddingStart="40dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imgAuthor"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/podcast_author_eg"
                        app:riv_corner_radius="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="33dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/listened_time"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tvListenedTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="24:15:05"
                                android:textColor="@color/textColor"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/playlists"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tvPlaylist"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="27"
                                android:textColor="@color/textColor"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="19dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@color/white"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/tvFollowers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="179"
                                android:textColor="@color/textColor"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/menuLy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/menu_bottom_bg" />
    </LinearLayout>

</FrameLayout>